--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -3,5 +3,12 @@
   <h1 class="mt-4">Classes</h1>
   <p>Returns all <a href="/classes">classes</a> from the database in the JSON format</p>
   <p>A query can be performed to return a specific class</p>
+  <h5>Example query:</h5>
+  <pre>
+    <code>
+     35.234.67.178/classes?class_id=2
+    </code>
+  </pre>
+
 </div>
 <%- include('./partials/sidebar'); -%>
