--- a/views/docs.ejs
+++ b/views/docs.ejs
@@ -2,7 +2,9 @@
 
       <div class="container-fluid">
         <h1 class="mt-4">PC Timetable API Documentation</h1>
-        <p>Add text</p>
+        <p>Welcome to the documentation for the Prague College
+          timetable API.
+        </p>
       </div>
 <%- include('./partials/sidebar'); -%>
 
