--- a/views/users.ejs
+++ b/views/users.ejs
@@ -3,5 +3,11 @@
   <h1 class="mt-4">Users</h1>
   <p>Returns all <a href="/users">users</a> from the database in the JSON format</p>
   <p>A query can be performed to return a specific user</p>
+   <h5>Example query:</h5>
+   <pre>
+     <code>
+       35.234.67.178/users?user_id=10
+     </code>
+   </pre>
 </div>
 <%- include('./partials/sidebar'); -%>
