--- a/views/classes_taken.ejs
+++ b/views/classes_taken.ejs
@@ -3,5 +3,12 @@
   <h1 class="mt-4">Classes Taken</h1>
   <p>Returns all <a href="/classes_taken">classes_taken</a> from the database in the JSON format</p>
   <p>A query can be performed to return a specific class taken</p>
+  <h5>Example query:</h5>
+  <pre>
+      <code>
+        35.234.67.178/classes_taken?class_id=5
+      </code>
+  </pre>
+
 </div>
 <%- include('./partials/sidebar'); -%>
