--- a/views/classes_taught.ejs
+++ b/views/classes_taught.ejs
@@ -3,5 +3,12 @@
   <h1 class="mt-4">Classes Taught</h1>
   <p>Returns all <a href="/classes_taught">classes_taught</a> from the database in the JSON format</p>
   <p>A query can be performed to return a specific class taught</p>
+  <h5>Example query:</h5>
+  <pre>
+      <code>
+        35.234.67.178/classes_taught?class_id=5
+      </code>
+  </pre>
+
 </div>
 <%- include('./partials/sidebar'); -%>
