--- a/views/classes_time.ejs
+++ b/views/classes_time.ejs
@@ -3,5 +3,12 @@
   <h1 class="mt-4">Classes Time</h1>
   <p>Returns all <a href="/classes_time">classes_time</a> from the database in the JSON format</p>
   <p>A query can be performed to return a specific class time</p>
+    <h5>Example query:</h5>
+    <pre>
+      <code>
+        35.234.67.178/classes_time?class_id=5
+      </code>
+    </pre>
+
 </div>
 <%- include('./partials/sidebar'); -%>
