--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,8 @@
     <div class="bg-light border-right" id="sidebar-wrapper">
       <div class="sidebar-heading">Endpoints </div>
       <div class="list-group list-group-flush">
+        <a href="/docs" class="list-group-item
+          list-group-item-action bg-light">Home</a>
         <a href="/docs/classes" class="list-group-item
           list-group-item-action bg-light">Classes</a>
         <a href="/docs/users" class="list-group-item
