--- a/views/students.ejs
+++ b/views/students.ejs
@@ -3,7 +3,13 @@
   <h1 class="mt-4">Students</h1>
   <p>Returns all <a href="/students">students</a> from the database in the JSON format.</p>
   <p>A query can be performed to return a specific student.</p>
+  <h5>Example query:</h5>
+  <pre>
+    <code>
+     35.234.67.178/students?student_id=4
+    </code>
+  </pre>
   <p>When a student id is specified, a timetable for that student can be generated.</p>
-  <p>The route for that is /students/{student_id}/timetable.</p>
+  <p>The route for that is <code>/students/{student_id}/timetable.</code></p>
 </div>
 <%- include('./partials/sidebar'); -%>
