--- a/views/teachers.ejs
+++ b/views/teachers.ejs
@@ -3,5 +3,13 @@
   <h1 class="mt-4">Teachers</h1>
   <p>Returns all <a href="/teachers">teachers</a> from the database in the JSON format</p>
   <p>A query can be performed to return a specific teacher</p>
+  <h5>Example query:</h5>
+  <pre>
+      <code>
+        35.234.67.178/teachers?teacher_id=1
+      </code>
+  </pre>
+  <p>When a teacher id is specified, a timetable for that teacher can be generated.</p>
+  <p>The route for that is <code>/teachers/{teacher_id}/timetable.</code></p>
 </div>
 <%- include('./partials/sidebar'); -%>
