--- a/views/classes_time.ejs
+++ b/views/classes_time.ejs
@@ -1,14 +1,31 @@
 <%- include('./partials/header'); -%>
 <div class="container-fluid">
   <h1 class="mt-4">Classes Time</h1>
-  <p>Returns all <a href="/classes_time">classes_time</a> from the database in the JSON format</p>
+    <h4>Get requests</h4>
+  <p>Example get request that returns all classes times in a JSON format:</p>
+  <pre>
+    <code>
+     curl 'http://35.234.67.178/classes_time'
+    </code>
+  </pre>
+  <h4>Post requests</h4>
+  <p>Example post request that inserts a new class time into the database:</p>
+  <pre>
+    <code>
+      curl --header "Content-Type: application/json" \
+      --request POST \
+      --data '{"class_id": 2,"class_day": "2020-04-10", "start_time": "12:00", 
+               "end_time": "14:00", "room": 204}' \
+      http://35.234.67.178/classes_time
+    </code>
+  </pre>
+  <h4>Queries</h4>
   <p>A query can be performed to return a specific class time</p>
-    <h5>Example query:</h5>
-    <pre>
-      <code>
-        35.234.67.178/classes_time?class_id=5
-      </code>
-    </pre>
-
+  <p>Example query:</p>
+  <pre>
+    <code>
+     curl 'http://35.234.67.178/classes_time?class_id=5'
+    </code>
+  </pre>
 </div>
 <%- include('./partials/sidebar'); -%>
