--- a/views/students.ejs
+++ b/views/students.ejs
@@ -1,14 +1,33 @@
 <%- include('./partials/header'); -%>
 <div class="container-fluid">
   <h1 class="mt-4">Students</h1>
-  <p>Returns all <a href="/students">students</a> from the database in the JSON format.</p>
-  <p>A query can be performed to return a specific student.</p>
-  <h5>Example query:</h5>
+  <h4>Get requests</h4>
+  <p>Example get request that returns all students in a JSON format:</p>
   <pre>
     <code>
-     35.234.67.178/students?student_id=4
+     curl 'http://35.234.67.178/students'
     </code>
   </pre>
+  <h4>Post requests</h4>
+  <p>Example post request that inserts a new student into the database:</p>
+  <pre>
+    <code>
+      curl --header "Content-Type: application/json" \
+      --request POST \
+      --data '{"user_id": 7, "current_semester": 2001, "programme_id": 3,
+               "semester_tuition": "4000"}' \
+      http://35.234.67.178/students
+    </code>
+  </pre>
+  <h4>Queries</h4>
+  <p>A query can be performed to return a specific student</p>
+  <p>Example query:</p>
+  <pre>
+    <code>
+     curl 'http://35.234.67.178/students?student_id=4'
+    </code>
+  </pre>
+  <h4>Timetable</h4>
   <p>When a student id is specified, a timetable for that student can be generated.</p>
   <p>The route for that is <code>/students/{student_id}/timetable.</code></p>
 </div>
