--- a/views/teachers.ejs
+++ b/views/teachers.ejs
@@ -1,15 +1,33 @@
 <%- include('./partials/header'); -%>
 <div class="container-fluid">
   <h1 class="mt-4">Teachers</h1>
-  <p>Returns all <a href="/teachers">teachers</a> from the database in the JSON format</p>
-  <p>A query can be performed to return a specific teacher</p>
-  <h5>Example query:</h5>
+  <h4>Get requests</h4>
+  <p>Example get request that returns all teachers in a JSON format:</p>
   <pre>
-      <code>
-        35.234.67.178/teachers?teacher_id=1
-      </code>
+    <code>
+     curl 'http://35.234.67.178/teachers'
+    </code>
   </pre>
+  <h4>Post requests</h4>
+  <p>Example post request that inserts a new teacher into the database:</p>
+  <pre>
+    <code>
+      curl --header "Content-Type: application/json" \
+      --request POST \
+      --data '{"user_id": 3}' \
+      http://35.234.67.178/teachers
+    </code>
+  </pre>
+  <h4>Queries</h4>
+  <p>A query can be performed to return a specific teacher</p>
+  <p>Example query:</p>
+  <pre>
+    <code>
+     curl 'http://35.234.67.178/teacher?teacher_id=2'
+    </code>
+  </pre>
+  <h4>Timetable</h4>
   <p>When a teacher id is specified, a timetable for that teacher can be generated.</p>
-  <p>The route for that is <code>/teachers/{teacher_id}/timetable.</code></p>
+  <p>The endpoint for that is <code>/teachers/{teacher_id}/timetable.</code></p>
 </div>
 <%- include('./partials/sidebar'); -%>
