links to endpoints

--- a/views/classes_taken.ejs
+++ b/views/classes_taken.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header'); -%>
 <div class="container-fluid">
-  <h1 class="mt-4">Classes Taken</h1>
+  <h1 class="mt-4"><a href="/classes_taken">Classes Taken</a></h1>
     <p>Example get request that returns all classes taken in a JSON format:</p>
   <pre>
     <code>
