--- a/views/classes_taught.ejs
+++ b/views/classes_taught.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header'); -%>
 <div class="container-fluid">
-  <h1 class="mt-4">Classes Taught</h1>
+  <h1 class="mt-4"><a href="/classes_taught">Classes Taught</a></h1>
       <p>Example get request that returns all classes taught in a JSON format:</p>
   <pre>
     <code>
