--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header'); -%>
 <div class="container-fluid">
-  <h1 class="mt-4">Users</h1>
+  <h1 class="mt-4"><a href="/users">Users</a></h1>
   <h4>Get requests</h4>
   <p>Example get request that returns all users in a JSON format:</p>
   <pre>
