--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header'); -%>
 <div class="container-fluid">
-  <h1 class="mt-4">Classes</h1>
+  <h1 class="mt-4"><a href="/classes">Classes</a></h1>
   <h4>Get requests</h4>
   <p>Example get request that returns all classes in a JSON format:</p>
   <pre>
