--- a/views/students.ejs
+++ b/views/students.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header'); -%>
 <div class="container-fluid">
-  <h1 class="mt-4">Students</h1>
+  <h1 class="mt-4"><a href="/students">Students</a></h1>
   <h4>Get requests</h4>
   <p>Example get request that returns all students in a JSON format:</p>
   <pre>
