--- a/views/teachers.ejs
+++ b/views/teachers.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header'); -%>
 <div class="container-fluid">
-  <h1 class="mt-4">Teachers</h1>
+  <h1 class="mt-4"><a href="/teachers">Teachers</a></h1>
   <h4>Get requests</h4>
   <p>Example get request that returns all teachers in a JSON format:</p>
   <pre>
