--- a/views/classes_taught.ejs
+++ b/views/classes_taught.ejs
@@ -1,13 +1,21 @@
 <%- include('./partials/header'); -%>
 <div class="container-fluid">
   <h1 class="mt-4"><a href="/classes_taught">Classes Taught</a></h1>
-      <p>Example get request that returns all classes taught in a JSON format:</p>
+  <h2>Get requests</h2>
+  <p>Example get request that returns all classes taught in a JSON format:</p>
   <pre>
     <code>
      curl 'http://35.234.67.178/classes_taught'
     </code>
   </pre>
-  <h4>Post requests</h4>
+  <p>A query can be performed to return a specific class taught</p>
+  <p>Example query:</p>
+  <pre>
+    <code>
+     curl 'http://35.234.67.178/classes_taught?class_id=5'
+    </code>
+  </pre>
+  <h2>Post requests</h2>
   <p>Example post request that inserts a new class taught into the database:</p>
   <pre>
     <code>
@@ -15,14 +23,6 @@
       --request POST \
       --data '{"class_id": 7, "teacher_id": 2}' \
       http://localhost:3000/classes_taught
-    </code>
-  </pre>
-  <h4>Queries</h4>
-  <p>A query can be performed to return a specific class taught</p>
-  <p>Example query:</p>
-  <pre>
-    <code>
-     curl 'http://35.234.67.178/classes_taught?class_id=5'
     </code>
   </pre>
 </div>
