--- a/views/students.ejs
+++ b/views/students.ejs
@@ -1,14 +1,24 @@
 <%- include('./partials/header'); -%>
 <div class="container-fluid">
   <h1 class="mt-4"><a href="/students">Students</a></h1>
-  <h4>Get requests</h4>
+  <h2>Get requests</h2>
   <p>Example get request that returns all students in a JSON format:</p>
   <pre>
     <code>
      curl 'http://35.234.67.178/students'
     </code>
   </pre>
-  <h4>Post requests</h4>
+  <p>A query can be performed to return a specific student</p>
+  <p>Example query:</p>
+  <pre>
+    <code>
+     curl 'http://35.234.67.178/students?student_id=4'
+    </code>
+  </pre>
+  <h4>Timetable</h4>
+  <p>When a student id is specified, a timetable for that student can be generated.</p>
+  <p>The endpoint for that is <code>/students/{student_id}/timetable.</code></p>
+  <h2>Post requests</h2>
   <p>Example post request that inserts a new student into the database:</p>
   <pre>
     <code>
@@ -19,16 +29,5 @@
       http://35.234.67.178/students
     </code>
   </pre>
-  <h4>Queries</h4>
-  <p>A query can be performed to return a specific student</p>
-  <p>Example query:</p>
-  <pre>
-    <code>
-     curl 'http://35.234.67.178/students?student_id=4'
-    </code>
-  </pre>
-  <h4>Timetable</h4>
-  <p>When a student id is specified, a timetable for that student can be generated.</p>
-  <p>The route for that is <code>/students/{student_id}/timetable.</code></p>
 </div>
 <%- include('./partials/sidebar'); -%>
