added attendance, removed classes_taken

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,12 +28,12 @@
           list-group-item-action bg-light">Users</a>
         <a href="/docs/students" class="list-group-item
           list-group-item-action bg-light">Students</a>
+        <a href="/docs/attendance" class="list-group-item
+          list-group-item-action bg-light">Attendance</a>
         <a href="/docs/teachers" class="list-group-item
           list-group-item-action bg-light">Teachers</a>
         <a href="/docs/classes_time" class="list-group-item
           list-group-item-action bg-light">Classes Time</a>
-        <a href="/docs/classes_taken" class="list-group-item
-          list-group-item-action bg-light">Classes Taken</a>
         <a href="/docs/classes_taught" class="list-group-item
           list-group-item-action bg-light">Classes Taught</a>
       </div>
