--- a/views/docs.ejs
+++ b/views/docs.ejs
@@ -5,6 +5,9 @@
         <p>Welcome to the documentation for the Prague College
           timetable API.
         </p>
+        <p>Disclaimer: This API only serves as a demo, not as a
+           finished implementation.
+        </p>
       </div>
 <%- include('./partials/sidebar'); -%>
 
