--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -25,5 +25,42 @@
       http://localhost:3000/attendance
     </code>
   </pre>
+  <h2>Delete requests</h2>
+  <p>Example delete request that deletes one attendance row from the database:</p>
+  <pre>
+    <code>
+      curl \
+      --request DELETE \
+      http://35.234.67.178/attendance\?student_id=7
+    </code>
+  </pre>
+  <p>Example delete request that deletes all of attendance from the database:</p>
+  <pre>
+    <code>
+      curl \
+      --request DELETE \
+      http://35.234.67.178/attendance
+    </code>
+  </pre>
+  <h2>Put requests</h2>
+  <p>Example put request that updates all fields of attendance in the database:</p>
+  <pre>
+    <code>
+      curl --header "Content-Type: application/json" \
+      --request PUT \
+      --data '{"nth_class_id": 2, "student_id=2", "attended": 0} \
+      http://35.234.67.178/attendance\?student_id=2
+    </code>
+  </pre>
+  <h2>Patch requests</h2>
+  <p>Example patch request that updates some fields of attendance in the database:</p>
+  <pre>
+    <code>
+      curl --header "Content-Type: application/json" \
+      --request PATCH \
+      --data '{"attended": 1}' \
+      http://35.234.67.178/attendance\?student_id=5
+    </code>
+  </pre>
 </div>
 <%- include('./partials/sidebar'); -%>
