--- a/views/students.ejs
+++ b/views/students.ejs
@@ -29,5 +29,42 @@
       http://35.234.67.178/students
     </code>
   </pre>
+  <h2>Delete requests</h2>
+  <p>Example delete request that deletes one students from the database:</p>
+  <pre>
+    <code>
+      curl \
+      --request DELETE \
+      http://35.234.67.178/students\?student_id=7
+    </code>
+  </pre>
+  <p>Example delete request that deletes all of the students from the database:</p>
+  <pre>
+    <code>
+      curl \
+      --request DELETE \
+      http://35.234.67.178/students
+    </code>
+  </pre>
+  <h2>Put requests</h2>
+  <p>Example put request that updates all fields of a student in the database:</p>
+  <pre>
+    <code>
+      curl --header "Content-Type: application/json" \
+      --request PUT \
+      --data '{"current_semester": 2002,"programme_id": 2, "semester_tuition": "2000"}' \
+      http://35.234.67.178/students\?student_id=2
+    </code>
+  </pre>
+  <h2>Patch requests</h2>
+  <p>Example patch request that updates some fields of a student in the database:</p>
+  <pre>
+    <code>
+      curl --header "Content-Type: application/json" \
+      --request PATCH \
+      --data '{"current_semester": 2004}' \
+      http://35.234.67.178/students\?student_id=5
+    </code>
+  </pre>
 </div>
 <%- include('./partials/sidebar'); -%>
