--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -12,7 +12,7 @@
   <p>Example query:</p>
   <pre>
     <code>
-     curl 'http://35.234.67.178/classes?class_id=2'
+     curl 'http://35.234.67.178/classes\?class_id=2'
     </code>
   </pre>
   <h2>Post requests</h2>
