--- a/views/students.ejs
+++ b/views/students.ejs
@@ -12,7 +12,7 @@
   <p>Example query:</p>
   <pre>
     <code>
-     curl 'http://35.234.67.178/students?student_id=4'
+     curl 'http://35.234.67.178/students\?student_id=4'
     </code>
   </pre>
   <h4>Timetable</h4>
