--- a/views/users.ejs
+++ b/views/users.ejs
@@ -12,7 +12,7 @@
   <h5>Example query:</h5>
   <pre>
      <code>
-          curl 'http://35.234.67.178/users?user_id=2'
+          curl 'http://35.234.67.178/users\?user_id=2'
      </code>
   </pre>
   <h2>Post requests</h2>
