--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -12,7 +12,7 @@
   <p>Example query:</p>
   <pre>
     <code>
-     curl 'http://35.234.67.178/attendance?student_id=5'
+     curl 'http://35.234.67.178/attendance\?student_id=5'
     </code>
   </pre>
   <h2>Post requests</h2>
