--- a/views/teachers.ejs
+++ b/views/teachers.ejs
@@ -12,7 +12,7 @@
   <p>Example query:</p>
   <pre>
     <code>
-     curl 'http://35.234.67.178/teacher?teacher_id=2'
+     curl 'http://35.234.67.178/teacher\?teacher_id=2'
     </code>
   </pre>
   <h4>Timetable</h4>
