--- a/views/students.ejs
+++ b/views/students.ejs
@@ -52,7 +52,8 @@
     <code>
       curl --header "Content-Type: application/json" \
       --request PUT \
-      --data '{"current_semester": 2002,"programme_id": 2, "semester_tuition": "2000"}' \
+      --data '{"current_semester": 2002,"programme_id": 2,
+               "semester_tuition": "2000"}' \
       http://35.234.67.178/students\?student_id=2
     </code>
   </pre>
